// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table can parse table 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "name",
                },
              ],
              "properties": Object {},
              "tagName": "th",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "gender",
                },
              ],
              "properties": Object {},
              "tagName": "th",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "tr",
          "type": "element",
        },
      ],
      "properties": Object {},
      "tagName": "thead",
      "type": "element",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Superman",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Male",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "tr",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Wonderwoman",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Famale",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "tr",
          "type": "element",
        },
      ],
      "properties": Object {},
      "tagName": "tbody",
      "type": "element",
    },
  ],
  "properties": Object {},
  "tagName": "table",
  "type": "element",
}
`;

exports[`Table can parse table with multiple headers 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "name",
                },
              ],
              "properties": Object {},
              "tagName": "th",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "gender",
                },
              ],
              "properties": Object {},
              "tagName": "th",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "tr",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "second",
                },
              ],
              "properties": Object {},
              "tagName": "th",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "header",
                },
              ],
              "properties": Object {},
              "tagName": "th",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "tr",
          "type": "element",
        },
      ],
      "properties": Object {},
      "tagName": "thead",
      "type": "element",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Superman",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Male",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "tr",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Wonderwoman",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Famale",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "tr",
          "type": "element",
        },
      ],
      "properties": Object {},
      "tagName": "tbody",
      "type": "element",
    },
  ],
  "properties": Object {},
  "tagName": "table",
  "type": "element",
}
`;

exports[`Table can parse table with multiple separators (ignore the rest) 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "name",
                },
              ],
              "properties": Object {},
              "tagName": "th",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "gender",
                },
              ],
              "properties": Object {},
              "tagName": "th",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "tr",
          "type": "element",
        },
      ],
      "properties": Object {},
      "tagName": "thead",
      "type": "element",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Superman",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Male",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "tr",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Wonderwoman",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Famale",
                },
              ],
              "properties": Object {},
              "tagName": "td",
              "type": "element",
            },
          ],
          "properties": Object {},
          "tagName": "tr",
          "type": "element",
        },
      ],
      "properties": Object {},
      "tagName": "tbody",
      "type": "element",
    },
  ],
  "properties": Object {},
  "tagName": "table",
  "type": "element",
}
`;
